[package]
name = "cs128h-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.5"
rand = "*"
rustfft = "=6.1.0"
czt = "0.3.7"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "bench"
harness = false
